fix: center align text for small EPS status display

--- a/web_viewer/fe_src/src/components/SystemInformation.css
+++ b/web_viewer/fe_src/src/components/SystemInformation.css
@@ -175,6 +175,10 @@
     font-size: 18px;
 }
 
+.eps-status.show-small {
+    text-align: center;
+}
+
 .consumption-texts {
     margin-top: 185px;
 }
